--- a/shnazzy.html
+++ b/shnazzy.html
@@ -898,7 +898,7 @@
               for key,val in g_traits.items():
                   if key not in ["name","img"]:
                       if key in search_keys:
-                          key = f"<u><i>{key}</u></i>
+                          key = f"<u><i>{key}</u></i>"
                       if toggle:
                           c1 += f"<p><b>{key}</b>: {val}</p>"
                       else:
