--- a/shnazzy.html
+++ b/shnazzy.html
@@ -835,7 +835,7 @@
     <footer class="footer mt-auto py-3 footer-class">
       <div class="container-fluid footer-class text-center">
         <span
-          >Built with ❤️ by
+          >Built in Python with ❤️ by
           <a href="https://twitter.com/stuckatsixpm">stuckatsixpm</a></span
         >
       </div>
@@ -879,7 +879,7 @@
           pieces = []
           tabletext = """<thead>
               <tr>
-                <th scope="col" class="text-center"">E-girl</th>
+                <th scope="col" class="text-center"">E-Girl</th>
                 <th scope="col" class="text-center"">Image</th>
                 <th scope="col" class="text-center"">Traits</th>
                 <th scope="col" class="text-center"">Sale Time</th>
