--- a/tag_listings.html
+++ b/tag_listings.html
@@ -41,8 +41,8 @@
         </div>
 
         <div class="px-2 py-5 my-4 container">
-            <h1>Interaction finder</h1>
-            <p>Click the button to go!
+            <h1>Super lazy sale finder</h1>
+            <p>Click the button to go! When it says Done, import into your spreadsheet editor
             <br>
             Data grabbing may take a while.
             I've done my best to check that this tool is accurate, but if you notice anything wrong with the lists, please contact me on <a href="https://discord.gg/sixpm">Discord</a>.</p>
