--- a/heroes.html
+++ b/heroes.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Heroes of Midgard Checker">
+    <meta property="og:title" content="Heroes of Midgard Checker">
+    <meta property="og:description" content="Check the rarity of any hero here!">
+    
     <title>Heroes of Midgard Checker</title>
-
     <link rel="icon" href="img/hom.png" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -44,8 +48,8 @@
         </div>
         <div class="container border rounded border-white bg-light my-4">
             <div class="container px-2 py-6 mt-4 w-100">
-                <h1>Find your heroes!</h1>
-                <p class="lead px-4 rounded" id="info_message">Try using <b>one</b> of the filters here</p>
+                <h1>Find some heroes!</h1>
+                <p class="lead px-4 rounded" id="info_message">Try using <b>one</b> of the filters below!</p>
                 <div class="container d-flex flex-wrap justify-content-center" id="params_section">
                     <div class="container-md input-group mb-2">
                         <span class="input-group-text">Asset ID</span>
