--- a/heroes.html
+++ b/heroes.html
@@ -38,7 +38,7 @@
     <main class="h-100" style="background-color: rgba(0, 0, 0, 0.5); background-size: cover; display: table;">
         <div class="text-secondary px-4 py-5 text-center w-100" style="background-color: rgba(0, 0, 0, 0.6);">
             <div class="py-5">
-                <a href="./index.html"><img class="d-block mx-auto mb-4 rounded-circle" src="img/hom.png" alt=""
+                <a href="./heroes"><img class="d-block mx-auto mb-4 rounded-circle" src="img/hom.png" alt=""
                         width="96" height="96"></a>
                 <h1 class="display-5 fw-bold text-white">Heroes of Midgard</h1>
                 <div class="col-lg-6 mx-auto">
