--- a/heroes.html
+++ b/heroes.html
@@ -89,7 +89,7 @@
 
                     </div>
                 </div>
-                <div id="navbot" class="container mt-4 w-25" hidden>
+                <div id="navbot" class="container my-4 w-25" hidden>
                     <div class="row">
                         <div class="col">
                             <button class="w-100 btn btn-primary" type="button" id="btn_prev"
