--- a/heroes.html
+++ b/heroes.html
@@ -248,7 +248,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{asset_data['name']}</h5>
                             <p class="card-text">Owner: {asset['owner']}</p>
-                            <p class="card-text">Score: {total}</p>
+                            <p class="card-text"><strong>Score: {total}</strong></p>
                             <a href="https://wax.atomichub.io/explorer/asset/{asset['asset_id']}" class="btn btn-primary">AtomicHub</a>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{asset_data['name']}</h5>
                             <p class="card-text">Owner: {asset['owner']}</p>
-                            <p class="card-text">Score: {total}</p>
+                            <p class="card-text"><strong>Score: {total}</strong></p>
                             <a href="https://wax.atomichub.io/explorer/asset/{asset['asset_id']}" class="btn btn-primary">AtomicHub</a>
                         </div>
                     </div>
