--- a/heroes.html
+++ b/heroes.html
@@ -70,7 +70,7 @@
                             class="spinner-border spinner-border-sm" role="status" hidden></span> Go!</button>
                 </div>
             </div>
-            <div class="container px-2 py-6 mt-4 w-100">
+            <div class="container px-2 py-6 mt-4 mb-4 w-100">
                 <hr>
                 <div id="navtop" class="container mt-4 w-25" hidden>
                     <div class="row">
@@ -84,12 +84,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex text-center justify-content-center" id="data_area" hidden>
+                <div class="d-flex text-center justify-content-center my-4" id="data_area" hidden>
                     <div class="flex-fill row row-cols-1 row-cols-sm-2 row-cols-md-4">
 
                     </div>
                 </div>
-                <div id="navbot" class="container my-4 w-25" hidden>
+                <div id="navbot" class="container w-25" hidden>
                     <div class="row">
                         <div class="col">
                             <button class="w-100 btn btn-primary" type="button" id="btn_prev"
