--- a/alcor-lp.html
+++ b/alcor-lp.html
@@ -47,7 +47,9 @@
     </div>
 
     <div class="px-2 py-5 my-4 container">
-      <h1>Instructions</h1>
+        <h2>What is this?</h2>
+        <p>This page uses the WAXSweden WAX endpoint to query the positions table of the <code>swap.alcor</code> smart contract. You can use this to generate a copy-pastable table of the wallets providing liquidity to a specific swap pool on Alcor, as well as the provided liquidity.</p>
+      <h2>Instructions</h2>
       <ol>
           <li>
               Go to
@@ -79,7 +81,7 @@
     <div class="container px-3 py-2 mb-2 border border-primary rounded">
       <p>Are you a dev looking trying to get this via API? Use this:</p>
       <code
-        >https://wax.alcor.exchange/api/v2/swap/pools/{LIQUIDITY_POOL_ID}/positions</code
+        ><a href="https://wax.alcor.exchange/api/v2/swap/pools/{LIQUIDITY_POOL_ID}/positions">https://wax.alcor.exchange/api/v2/swap/pools/{LIQUIDITY_POOL_ID}/positions</a></code
       >
     </div>
     
