--- a/interactions.html
+++ b/interactions.html
@@ -4,10 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Interaction Finder - WAX Toolkit</title>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.9.0/brython.min.js">
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
         </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.9.0/brython_stdlib.min.js">
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
         </script>
 
         <link rel="icon" href="img/favicon-32x32.png">
