--- a/shnazzy.html
+++ b/shnazzy.html
@@ -6,8 +6,10 @@
     <title>Shnazzy's E-Girls Checker</title>
 
     <link rel="icon" href="img/favicon-32x32.png" />
-    <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
+    </script>
 
     <script
       src="https://cdn.bokeh.org/bokeh/release/bokeh-2.4.2.min.js"
