--- a/heroes.html
+++ b/heroes.html
@@ -14,10 +14,10 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.6/brython.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.6/brython_stdlib.min.js">
-    </script>
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
+        </script>
 
     <!-- JavaScript Bundle with Popper -->
 
