--- a/tag_listings.html
+++ b/tag_listings.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TAG Sales</title>
 
-        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
+        </script>
 
         <link rel="icon" href="img/favicon-32x32.png">
 
